--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           <div class="divider"></div>
           <div class="range range-sm-center range-30 range-md-justify">
             <div class="cell-sm-5 cell-md-6 text-sm-left text-center">
-              <p>Raghib Noor&nbsp;&copy;&nbsp;<span id="copyright-year"></span>.&nbsp;<br class="veil-sm">	<a class="link-underline" href="privacy-policy.html">Privacy Policy</a>
+              <p>Falguni Shobnom&nbsp;&copy;&nbsp;<span id="copyright-year"></span>.&nbsp;<br class="veil-sm">	<a class="link-underline" href="privacy-policy.html">Privacy Policy</a>
                 <!-- {%FOOTER_LINK}	-->
               </p>
             </div>
